--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -15,7 +15,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-text">&lt;/&gt;</span>
+                <a href="#home" class="logo-link">
+                    <span class="logo-text">&lt;/&gt;</span>
+                </a>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -23,7 +25,7 @@
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <!-- <li><a href="#contact" class="nav-link">Contact</a></li> -->
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -54,7 +56,7 @@
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View Projects</a>
-                        <a href="#contact" class="btn btn-secondary">Contact Me</a>
+                        <!-- <a href="#contact" class="btn btn-secondary">Contact Me</a> -->
                     </div>
                 </div>
                 <div class="hero-visual">
@@ -157,8 +159,8 @@
                             <span class="tech-tag">Data Structures</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/soyeonkm" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <!-- <a href="https://github.com/soyeonkm" class="project-link"><i class="fab fa-github"></i> Code</a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Demo</a> -->
                         </div>
                     </div>
                 </div>
@@ -170,7 +172,7 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Sports Image Metadata Tagger</h3>
+                        <h3 class="project-title">TagIt</h3>
                         <p class="project-description">
                             A cross-platform desktop application using Tauri (Rust) and React.js that automated sports image 
                             metadata tagging, combining OpenCV face recognition and custom YOLOv8 jersey number detection.
@@ -182,8 +184,8 @@
                             <span class="tech-tag">YOLOv8</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/soyeonkm" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <!-- <a href="https://github.com/soyeonkm" class="project-link"><i class="fab fa-github"></i> Code</a> -->
+                            <!-- <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Demo</a> -->
                         </div>
                     </div>
                 </div>
@@ -207,8 +209,8 @@
                             <span class="tech-tag">C#</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/soyeonkm" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <!-- <a href="https://github.com/soyeonkm" class="project-link"><i class="fab fa-github"></i> Code</a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Demo</a> -->
                         </div>
                     </div>
                 </div>
@@ -372,7 +374,8 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact Section (Disabled for now) -->
+    <!--
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
@@ -428,6 +431,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -440,7 +444,7 @@
                     <a href="#home">Home</a>
                     <a href="#about">About</a>
                     <a href="#projects">Projects</a>
-                    <a href="#contact">Contact</a>
+                    <!-- <a href="#contact">Contact</a> -->
                 </div>
             </div>
         </div>
